<resources>
    <string name="app_name">Cinegum</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>

    <string name="admob_app_id">ca-app-pub-9647365096448221~8136710741</string>
    <string name="admob_app_id_sample">ca-app-pub-3940256099942544~3347511713</string>


    <string name="fontNexaLight">NexaLight.otf</string>

    <string name="fontBillABong">Billabong.ttf</string>

    <string name="fontProxima">proxima/ProximaNova-Regular.otf</string>
    <string name="fontProximaBold">proxima/Proxima Nova Bold.otf</string>
    <string name="fontProximaExtraBold">proxima/Proxima Nova Extrabold.otf</string>
    <string name="fontProximaThin">proxima/Proxima Nova Thin.otf</string>

    <string name="fontProximaAltBold">proxima/Proxima Nova Alt Bold.otf</string>
    <string name="fontProximaAltThin">proxima/Proxima Nova Alt Thin.otf</string>
    <string name="fontProximaAltLight">proxima/Proxima Nova Alt Light.otf</string>
    <string name="forgot_password">Forgotten your login details? <font color="black">Get help with signing in.</font></string>
    <string name="signup_instead">Don\'t have an account? <font color="black">Sign up.</font></string>
    <string name="login_instead">Already have an account? <font color="black">Log in.</font></string>
    <string name="ok">OK</string>
    <string name="playstore_not_found">Google Playstore App Not found</string>
    <string name="share_with">Share with</string>
    <string name="share_app_not_found">No Sharing app found</string>
    <string name="feedback_cap">Feedback</string>
    <string name="webmaster_email">webmaster@screentagram.com</string>
    <string name="your_feedback_is_valuable_to_us">Your feedback is valuable to us.</string>
    <string name="send_cap">Send</string>
    <string name="choose_an_email_client">Choose an email client</string>
    <string name="email_client_not_found">No email client found.</string>
    <string name="cancel_cap">Cancel</string>
    <string name="conn_error">Please check your internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_image_selector">ImageSelectorActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_screenshot">Edit Screenshot</string>
    <string name="new_screenshot">New Screenshot</string>
    <string name="view_replies_d">View Replies (%d)</string>
    <string name="replying_to_d">Replying to %s</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_share_the_app">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_log_out">Logout</string>
    <string name="email_address_or_username">Email address or username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="videos">Videos</string>
    <string name="upload">Upload</string>
    <string name="withdraw">Withdraw</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="firstname">Firstname</string>
    <string name="surname_lastname">Surname/Lastname</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="today_earnings">Today Earnings</string>
    <string name="yesterday_earnings">Yesterday Earnings</string>
    <string name="last_month_earnings">Last Month Earnings</string>
    <string name="total_payout">Total Payout</string>
    <string name="message_after_admob_reward"><![CDATA[You\'ve earned %d more coins. Click <b>Watch Again</b> to earn another %d]]></string>
    <string name="admob_videos_availability_message">Quick videos are available now. Click the Quick Video button to watch now</string>
    <string name="menu_about_us">About Us</string>
    <string name="video_loading_error">An error occurred while loading video</string>
</resources>
