<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divider"
        android:padding="@dimen/content_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <com.jinminetics.views.JTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextLogo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/form_area_margin_hr"
                android:layout_marginRight="@dimen/form_area_margin_hr">
                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/email"
                    android:singleLine="true"
                    android:hint="@string/email_address"/>

                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/username"
                    android:singleLine="true"
                    android:hint="@string/username"/>

                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/password"/>

                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/cpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/confirm_password"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <com.jinminetics.views.JButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:id="@+id/submit"
                        android:enabled="true"
                        android:background="@color/transparent"
                        android:text="@string/sign_up"
                        style="@style/FontNormal"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/gradient_bg_progress" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey05"
        android:layout_above="@id/loginInstead"/>
    <com.jinminetics.views.JTextView
        android:id="@+id/loginInstead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_instead"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        style="@style/FontNormal"/>
</RelativeLayout>