<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">
    <include layout="@layout/edit_toolbar" android:id="@+id/toolbarLay" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImageNew"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
                    <ProgressBar
                        android:id="@+id/profileImageProgressBarNew"
                        android:layout_width="@dimen/progressbar_round_loading"
                        android:layout_height="@dimen/progressbar_round_loading"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <com.jinminetics.views.JTextView
                    android:id="@+id/changeProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Button.Medium"
                    android:text="@string/change_profile_photo"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/transparent"
                    android:hint="@string/username"
                    android:singleLine="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey05"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/transparent"
                    android:hint="@string/firstname"
                    android:singleLine="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey05"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/transparent"
                    android:hint="@string/surname_lastname"
                    android:singleLine="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey05"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>

                <com.jinminetics.views.JTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    style="@style/Button.Medium"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <include layout="@layout/change_pass_toolbar" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/oldPass"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    style="@style/FormTextInput"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPass"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    style="@style/FormTextInput"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cnewPass"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    style="@style/FormTextInput"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>