<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.jinminetics.views.JTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextLogo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/form_area_margin_hr"
                android:layout_marginRight="@dimen/form_area_margin_hr">
                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/userId"
                    android:singleLine="true"
                    android:hint="@string/email_address_or_username"/>

                <com.jinminetics.views.JEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FormTextInput"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/password"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <com.jinminetics.views.JButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:id="@+id/submit"
                        android:enabled="true"
                        android:background="@color/transparent"
                        android:text="@string/log_in"
                        style="@style/FontNormal"/>
                </android.support.v7.widget.CardView>

                <com.jinminetics.views.JTextView
                    android:id="@+id/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FontNormal"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <View
                        android:id="@+id/div1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey05"
                        android:layout_toLeftOf="@id/or"
                        android:layout_centerVertical="true"/>
                    <com.jinminetics.views.JTextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/h4"
                        style="@style/FontNormal"/>
                    <View
                        android:id="@+id/div2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey05"
                        android:layout_toRightOf="@id/or"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

                <com.jinminetics.views.JTextView
                    android:id="@+id/sloginInstead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_instead"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/FontNormal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/gradient_bg_progress" />
</RelativeLayout>