<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@+id/toolbarLay" layout="@layout/toolbar" />
    <RelativeLayout
        android:id="@+id/details"
        android:layout_below="@id/toolbarLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/logo_rel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"/>
            <ProgressBar
                android:id="@+id/profileImageProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_toRightOf="@id/logo_rel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:layout_toEndOf="@id/logo_rel"
            android:layout_alignParentEnd="true">
            <com.jinminetics.views.JTextView
                android:id="@+id/username"
                android:text="@string/username"
                style="@style/Button.Medium"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginBottom="5dp"/>
            <com.jinminetics.views.JTextView
                android:id="@+id/email"
                style="@style/Button.Medium"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jinminetics@gmail.com"
                android:layout_marginBottom="5dp"/>
            <com.jinminetics.views.JTextView
                android:id="@+id/editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Button.Edit"
                android:padding="10dp"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey05"
        android:layout_below="@id/details"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/admobBannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div1"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admobBannerContainer"
        android:paddingBottom="56dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_earnings"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/earnings_margin_vr">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Earnings"
                    android:orientation="horizontal">
                    <com.jinminetics.views.JTextView
                        android:id="@+id/earnings_title_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_earnings"
                        style="@style/Earnings.Title"/>
                    <com.jinminetics.views.JTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="230 coins"
                        style="@style/Earnings.Value"
                        android:layout_below="@id/earnings_title_1"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_earnings"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/earnings_margin_vr">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Earnings"
                    android:orientation="horizontal">
                    <com.jinminetics.views.JTextView
                        android:id="@+id/earnings_title_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_earnings"
                        style="@style/Earnings.Title"/>
                    <com.jinminetics.views.JTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23 coins"
                        style="@style/Earnings.Value"
                        android:layout_below="@id/earnings_title_2"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_earnings"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/earnings_margin_vr">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Earnings"
                    android:orientation="horizontal">
                    <com.jinminetics.views.JTextView
                        android:id="@+id/earnings_title_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday_earnings"
                        style="@style/Earnings.Title"/>
                    <com.jinminetics.views.JTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="57 coins"
                        style="@style/Earnings.Value"
                        android:layout_below="@id/earnings_title_3"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_earnings"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/earnings_margin_vr">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Earnings"
                    android:orientation="horizontal">
                    <com.jinminetics.views.JTextView
                        android:id="@+id/earnings_title_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_month_earnings"
                        style="@style/Earnings.Title"/>
                    <com.jinminetics.views.JTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2,633 coins"
                        style="@style/Earnings.Value"
                        android:layout_below="@id/earnings_title_4"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_earnings"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/earnings_margin_vr">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Earnings"
                    android:orientation="horizontal">
                    <com.jinminetics.views.JTextView
                        android:id="@+id/earnings_title_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_payout"
                        style="@style/Earnings.Title"/>
                    <com.jinminetics.views.JTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="49,633 coins"
                        style="@style/Earnings.Value"
                        android:layout_below="@id/earnings_title_5"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </ScrollView>
</RelativeLayout>